reject request (without locking commits)
