# mainServer/repositories/postgres/request.go
@@ -41,6 +41,38 @@ func (r PgRequestRepository) CreateRequest(req entities.Request) (entities.Reque
 	return req, nil
 }
 
+func (r PgRequestRepository) SetStatus(request int64, status string) error {
+
+	// store request entity
+	stmt, err := r.Db.Prepare("UPDATE request SET state = $2 WHERE id = $1")
+	if err != nil {
+		return err
+	}
+	_, err = stmt.Exec(request, status)
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func (r PgRequestRepository) GetRequest(request int64) (entities.Request, error) {
+	// store request entity
+	stmt, err := r.Db.Prepare("SELECT * FROM request WHERE id=$1")
+	if err != nil {
+		return entities.Request{}, err
+	}
+	row := stmt.QueryRow(request)
+
+	// Retrieve columns generated by database
+	var req entities.Request
+	err = row.Scan(&req.RequestID, &req.ArticleID, &req.SourceVersionID, &req.SourceHistoryID, &req.TargetVersionID, &req.TargetHistoryID, &req.State)
+	if err != nil {
+		return entities.Request{}, err
+	}
+
+	return req, nil
+}
+
 // creates request table, storing history/commit IDs as fixed-length,
 // as they are always sha-1 hashes of 40 hex digits long
 func (r PgRequestRepository) createRequestTable() error {
